<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather</string>
    <string name="current_temperature_celsius">%1$.0f\u00B0c</string>
    <string name="current_temperature_fahrenheit">%1$.0f\u00B0F</string>
    <string name="max_min_temperature">%1$s \n%2$s</string>
    <string name="max_min_temperature_celsius">%1$.0f°c \n%2$.0f°c</string>
    <string name="max_min_temperature_fahrenheit">%1$.0f°F \n%2$.0f°F</string>
    <string name="max_min_temperature_2_celsius">%1$.0f°c | %2$.0f°c</string>
    <string name="max_min_temperature_2_fahrenheit">%1$.0f°F | %2$.0f°F</string>
    <string name="wind_speed_direction">%1$s\n%2$d м\с</string>
    <string name="wind_speed_direction_detail">%1$s, %2$.0f м\с</string>
    <string name="wind_speed">%1$s %2$d м\с</string>
    <string name="base_url_upload_data_weather">https://api.weatherbit.io/v2.0/</string>
    <string name="base_url_upload_cities_list">http://autocomplete.wunderground.com/aq</string>
    <string name="input_city_name">Введите название городе</string>
    <string name="add_text_button">Добавить</string>
    <string name="empty_cities">Нету данных для отображения.\n Пожалуйста включите интернет, а затем добавьте город.</string>

    <string name="clear_weather">Ясно</string>
    <string name="partially_cloudy_weather">Переменная\nоблачность</string>
    <string name="cloudy_weather">Облачно</string>
    <string name="rain_weather">Дождь</string>
    <string name="snow_weather">Снег</string>
    <string name="mist_weather">Туман</string>
    <string name="thunderstorm_weather">Дождь\nс грозой</string>
    <string name="delete">Удалить</string>
    <string name="return_data">Вернуть</string>
    <string name="delete_data">%1$s удален из базы</string>
    <string name="title_dialog_delete">Вы уверены, что хотите удалить %1$s</string>
    <string name="title_agree_delete">Да, удалить</string>
    <string name="key_temperature_units">key_temperature_units</string>
    <string name="title_temperature_units">Единицы температуры</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">О приложение текст</string>
    <string name="app_version">1.0</string>
    <string name="title_version">Version</string>
    <string name="title_send_feedback">Отправить отзыв о приложении</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="summary_support">Пожелание по улучшению, а также жалобы.</string>
    <string name="title_terms">Оценить приложение</string>
    <string name="url_rate_app"><![CDATA[https://play.google.com/store/apps/details?id=com.belkatechnologies.clockmaker&hl=ru]]></string>
    <string name="pref_contact_with_developer">Связь с разработчиком</string>
    <string name="key_contact">key_contact</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="precipitation_detail">Вер. ос. %1$d %%</string>
    <string name="precipitation">%1$d %%</string>
    <string name="pressure_detail">Давление: %1$.1f мм </string>
    <string name="wind_condition">%1$s\n%2$.1f m/s</string>

    <string name="maxmin_title">max\n   \\min</string>
    <string name="title_splash_load">Пожалуйста подождите.\n  Идет обновление данных...</string>
    <string name="title_splash">Погода любой точки мира</string>


</resources>